--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "fastclick": "^1.0.6",
     "lib-flexible": "^0.3.2",
     "vue": "^2.5.2",
-    "vue-router": "^3.0.1"
+    "vue-router": "^3.0.1",
+    "vue-swipe": "^2.3.0"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.2",
